# Helpers

./: README.md
Hysteresis/: CMakeLists.txt
Hysteresis/codeToTest/: hysteresis.hpp
Hysteresis/test/: tests.cpp
StateMashine/codeToTest/: StateMashine.hpp
StateMashine/test/: tests.cpp
